@@ -23,6 +23,9 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2001-10-29  Cristy  <cristy@mystic.es.dupont.com>
+	* ImageMagick now has a registry for storing image blobs.
+
 2001-10-26  Cristy  <cristy@mystic.es.dupont.com>
 	* Added VMS patches (thanks to Jouk Jansen).
 
